--- a/rekindled.csproj
+++ b/rekindled.csproj
@@ -41,23 +41,22 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="VintagestoryAPI">
-      <HintPath>..\..\..\..\..\..\..\..\Games\Vintagestory\VintagestoryAPI.dll</HintPath>
+      <HintPath>D:\Games\Vintagestory\VintagestoryAPI.dll</HintPath>
     </Reference>
     <Reference Include="VSEssentials">
-      <HintPath>..\..\..\..\..\..\..\..\Games\Vintagestory\Mods\VSEssentials.dll</HintPath>
+      <HintPath>D:\Games\Vintagestory\Mods\VSEssentials.dll</HintPath>
     </Reference>
     <Reference Include="VSSurvivalMod">
-      <HintPath>..\..\..\..\..\..\..\..\Games\Vintagestory\Mods\VSSurvivalMod.dll</HintPath>
+      <HintPath>D:\Games\Vintagestory\Mods\VSSurvivalMod.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="modinfo.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\BBehaviorTransferAttributesOnDrop.cs" />
-    <Compile Include="src\BEBehaviorTransientLight.cs" />
     <Compile Include="src\BlockEntityExtinguishable.cs" />
     <Compile Include="src\BlockRekindledTorch.cs" />
+    <Compile Include="src\BEBehaviorTransient.cs" />
     <Compile Include="src\EnumLitState.cs" />
     <Compile Include="src\RedirectLogs.cs" />
     <Compile Include="src\RekindledMain.cs" />
