--- a/Rekindled/Properties/launchSettings.json
+++ b/Rekindled/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Client": {
       "commandName": "Executable",
       "executablePath": "dotnet",
-      "commandLineArgs": "$(VINTAGE_STORY)/Vintagestory.dll\r\n--tracelog \r\n-openWorld=\"modsamplestest\" \r\n-pcreativebuilding \r\n--addModPath=\"C:\\Users\\heatb\\Desktop\\game dev\\_vintage story modding\\mods\\Rekindled\\Rekindled\\bin\\Debug\\Mods\"",
+      "commandLineArgs": "$(VINTAGE_STORY)/Vintagestory.dll\r\n--tracelog \r\n-openWorld=\"oillamptest\" \r\n-pcreativebuilding \r\n--addModPath=\"C:\\Users\\heatb\\Desktop\\game dev\\_vintage story modding\\mods\\Rekindled\\Rekindled\\bin\\Debug\\Mods\"",
       "workingDirectory": "D:/Games/Vintagestory"
     },
     "Server": {
