added mock BE class to allow BEBehaviors to be properly addedd, trimmed imports

--- a/Rekindled/Rekindled.csproj
+++ b/Rekindled/Rekindled.csproj
@@ -51,4 +51,8 @@
     </Content>
 </ItemGroup>
 
+<ItemGroup>
+  <Content Remove="..\resources\assets\rekindled\patches\oillamppatches.json" />
+</ItemGroup>
+
 </Project>
